// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diagram generation — examples/acme-org > renders a scoped topology diagram for a single team 1`] = `
"flowchart LR
  platform_payments["Platform Payments"]
  stream_checkout["Stream Checkout"]
  stream_onboarding["Stream Onboarding"]
  stream_checkout -->|"platform / x-as-a-service"| platform_payments
  stream_checkout -->|"collaboration / depends (Slowing)"| stream_onboarding
  classDef default fill:#ede9fe,stroke:#7c3aed,stroke-width:1px,color:#1e1b4b;"
`;

exports[`diagram generation — examples/acme-org > renders the org-wide context map diagram 1`] = `
"flowchart LR
  enabling_devex["Enabling DevEx"]
  platform_payments["Platform Payments"]
  stream_checkout["Stream Checkout"]
  stream_onboarding["Stream Onboarding"]
  stream_checkout -->|"CustomerSupplier"| platform_payments
  stream_checkout -->|"Partnership (inferred)"| stream_onboarding
  stream_onboarding -->|"unclassified"| enabling_devex
  classDef default fill:#ede9fe,stroke:#7c3aed,stroke-width:1px,color:#1e1b4b;"
`;

exports[`diagram generation — examples/acme-org > renders the org-wide role hierarchy diagram as DOT 1`] = `
"digraph "Organization Hierarchy" {
  rankdir=TB;
  node [style=filled, fillcolor="#ede9fe", color="#7c3aed", fontcolor="#1e1b4b"];
  subgraph cluster_0 {
    label="Enabling DevEx";
    "enabling-devex__coach" [label="DevEx Coach (DeliveryLead) — Marta Kowalski"];
  }
  subgraph cluster_1 {
    label="Platform Payments";
    "platform-payments__head-of-engineering" [label="Head of Engineering (EngineeringManager) — vacant"];
    "platform-payments__ledger-engineer" [label="Ledger Engineer (Engineer) — Lin Zhao"];
    "platform-payments__payments-engineer" [label="Payments API Engineer (Engineer) — Sam Okafor"];
    "platform-payments__tech-lead" [label="Payments Tech Lead (TechLead) — Priya Raman"];
  }
  subgraph cluster_2 {
    label="Stream Checkout";
    "stream-checkout__backend-engineer" [label="Checkout Backend Engineer (Engineer) — Yuki Tanaka"];
    "stream-checkout__frontend-engineer" [label="Checkout Frontend Engineer (Engineer) — Fatima Al-Sayed"];
    "stream-checkout__tech-lead" [label="Checkout Tech Lead (TechLead) — Diego Alves"];
  }
  subgraph cluster_3 {
    label="Stream Onboarding";
    "stream-onboarding__engineer" [label="Onboarding Engineer (Engineer) — Aisha Bello"];
    "stream-onboarding__tech-lead" [label="Onboarding Tech Lead (TechLead) — Noah Fischer"];
  }
  "platform-payments__head-of-engineering" -> "platform-payments__tech-lead";
  "platform-payments__tech-lead" -> "platform-payments__payments-engineer";
  "platform-payments__tech-lead" -> "platform-payments__ledger-engineer";
  "stream-checkout__tech-lead" -> "stream-checkout__backend-engineer";
  "stream-checkout__tech-lead" -> "stream-checkout__frontend-engineer";
  "stream-onboarding__tech-lead" -> "stream-onboarding__engineer";
  "platform-payments__head-of-engineering" -> "stream-checkout__tech-lead";
  "stream-checkout__tech-lead" -> "enabling-devex__coach" [label="aligns with", style=dashed];
  "platform-payments__head-of-engineering" -> "stream-onboarding__tech-lead";
  "stream-onboarding__tech-lead" -> "enabling-devex__coach" [label="aligns with", style=dashed];
}"
`;

exports[`diagram generation — examples/acme-org > renders the org-wide role hierarchy diagram as Mermaid, grouped into boxes per team 1`] = `
"flowchart TD
  subgraph enabling_devex["Enabling DevEx"]
    enabling_devex__coach["DevEx Coach (DeliveryLead) — Marta Kowalski"]
  end
  subgraph platform_payments["Platform Payments"]
    platform_payments__head_of_engineering["Head of Engineering (EngineeringManager) — vacant"]
    platform_payments__ledger_engineer["Ledger Engineer (Engineer) — Lin Zhao"]
    platform_payments__payments_engineer["Payments API Engineer (Engineer) — Sam Okafor"]
    platform_payments__tech_lead["Payments Tech Lead (TechLead) — Priya Raman"]
  end
  subgraph stream_checkout["Stream Checkout"]
    stream_checkout__backend_engineer["Checkout Backend Engineer (Engineer) — Yuki Tanaka"]
    stream_checkout__frontend_engineer["Checkout Frontend Engineer (Engineer) — Fatima Al-Sayed"]
    stream_checkout__tech_lead["Checkout Tech Lead (TechLead) — Diego Alves"]
  end
  subgraph stream_onboarding["Stream Onboarding"]
    stream_onboarding__engineer["Onboarding Engineer (Engineer) — Aisha Bello"]
    stream_onboarding__tech_lead["Onboarding Tech Lead (TechLead) — Noah Fischer"]
  end
  platform_payments__head_of_engineering --> platform_payments__tech_lead
  platform_payments__tech_lead --> platform_payments__payments_engineer
  platform_payments__tech_lead --> platform_payments__ledger_engineer
  stream_checkout__tech_lead --> stream_checkout__backend_engineer
  stream_checkout__tech_lead --> stream_checkout__frontend_engineer
  stream_onboarding__tech_lead --> stream_onboarding__engineer
  platform_payments__head_of_engineering --> stream_checkout__tech_lead
  stream_checkout__tech_lead -.->|"aligns with"| enabling_devex__coach
  platform_payments__head_of_engineering --> stream_onboarding__tech_lead
  stream_onboarding__tech_lead -.->|"aligns with"| enabling_devex__coach
  classDef default fill:#ede9fe,stroke:#7c3aed,stroke-width:1px,color:#1e1b4b;"
`;

exports[`diagram generation — examples/acme-org > renders the role hierarchy diagram for stream-checkout 1`] = `
"flowchart TD
  backend_engineer["Checkout Backend Engineer (Engineer) — Yuki Tanaka"]
  frontend_engineer["Checkout Frontend Engineer (Engineer) — Fatima Al-Sayed"]
  tech_lead["Checkout Tech Lead (TechLead) — Diego Alves"]
  tech_lead --- backend_engineer
  tech_lead --- frontend_engineer
  classDef default fill:#ede9fe,stroke:#7c3aed,stroke-width:1px,color:#1e1b4b;"
`;

exports[`diagram generation — examples/acme-org > renders the topology diagram as DOT 1`] = `
"digraph "Organization Topology" {
  rankdir=LR;
  node [style=filled, fillcolor="#ede9fe", color="#7c3aed", fontcolor="#1e1b4b"];
  "enabling-devex" [label="Enabling DevEx"];
  "platform-payments" [label="Platform Payments"];
  "stream-checkout" [label="Stream Checkout"];
  "stream-onboarding" [label="Stream Onboarding"];
  "stream-checkout" -> "platform-payments" [label="platform", style=dotted];
  "stream-checkout" -> "platform-payments" [label="x-as-a-service"];
  "stream-checkout" -> "stream-onboarding" [label="collaboration"];
  "stream-checkout" -> "stream-onboarding" [label="depends (Slowing)", style=dotted];
  "stream-onboarding" -> "enabling-devex" [label="facilitating", style=dashed];
  "stream-onboarding" -> "platform-payments" [label="depends (OK)", style=dotted];
}"
`;

exports[`diagram generation — examples/acme-org > renders the topology diagram as Mermaid 1`] = `
"flowchart LR
  enabling_devex["Enabling DevEx"]
  platform_payments["Platform Payments"]
  stream_checkout["Stream Checkout"]
  stream_onboarding["Stream Onboarding"]
  stream_checkout -->|"platform / x-as-a-service"| platform_payments
  stream_checkout -->|"collaboration / depends (Slowing)"| stream_onboarding
  stream_onboarding -.->|"facilitating"| enabling_devex
  stream_onboarding -.->|"depends (OK)"| platform_payments
  classDef default fill:#ede9fe,stroke:#7c3aed,stroke-width:1px,color:#1e1b4b;"
`;
